paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/array_decl_4/sample_002/target.compile.log
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `lazy_static`
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/array_decl_4/sample_002/target.rs:3:1
  |
3 | lazy_static::lazy_static! {
  | ^^^^^^^^^^^ use of unresolved module or unlinked crate `lazy_static`

error[E0425]: cannot find value `BACKING` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/array_decl_4/sample_002/target.rs:31:17
   |
31 |     let mut q = BACKING.borrow_mut();
   |                 ^^^^^^^ not found in this scope

error[E0425]: cannot find value `SINK` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/array_decl_4/sample_002/target.rs:38:6
   |
38 |     *SINK.borrow_mut() ^= chk;
   |      ^^^^ not found in this scope

error[E0425]: cannot find value `BACKING` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/array_decl_4/sample_002/target.rs:45:24
   |
45 |     fill_backing(&mut *BACKING.borrow_mut());
   |                        ^^^^^^^ not found in this scope

error[E0425]: cannot find value `BACKING` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/array_decl_4/sample_002/target.rs:66:29
   |
66 |         if checksum_2d(m, &*BACKING.borrow()) != checksum_2d(m, &expect) {
   |                             ^^^^^^^ not found in this scope

error[E0425]: cannot find value `BACKING` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/array_decl_4/sample_002/target.rs:81:29
   |
81 |         if checksum_2d(m, &*BACKING.borrow()) != checksum_2d(m, &expect2) {
   |                             ^^^^^^^ not found in this scope

error[E0425]: cannot find value `SINK` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/array_decl_4/sample_002/target.rs:86:9
   |
86 |     if *SINK.borrow() == 0 {
   |         ^^^^ not found in this scope

warning: unused import: `std::cell::RefCell`
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/array_decl_4/sample_002/target.rs:1:5
  |
1 | use std::cell::RefCell;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error: aborting due to 7 previous errors; 1 warning emitted

Some errors have detailed explanations: E0425, E0433.
For more information about an error, try `rustc --explain E0425`.